k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-cart
  namespace: my-project
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-cart
  template:
    metadata:
      labels:
        app: ms-cart
    spec:
      containers:
        - name: ms-cart
          image: aminramazanov/ms-cart:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8087
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8087
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
